--- a/FrontEndPills/app.json
+++ b/FrontEndPills/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "pillsMonitoringApp",
-    "slug": "pillsMonitoringApp",
+    "name": "FrontEndPills",
+    "slug": "FrontEndPills",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
