--- a/barbarShop/package.json
+++ b/barbarShop/package.json
@@ -31,9 +31,11 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-onboard": "^2.6.0",
+    "react-native-onboarding-swiper": "^1.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
