--- a/codeGyan/FullStack/elib/package.json
+++ b/codeGyan/FullStack/elib/package.json
@@ -4,12 +4,13 @@
   "description": "ebook",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.ts"
   },
   "author": "Rabab",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.8.6",
+    "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
