--- a/codeGyan/FullStack/elib/package.json
+++ b/codeGyan/FullStack/elib/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/dotenv": "^8.2.3",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.8.6",
     "eslint": "^9.13.0",
     "globals": "^15.11.0",
@@ -17,5 +19,9 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1"
   }
 }
