--- a/codeGyan/FullStack/elib/package.json
+++ b/codeGyan/FullStack/elib/package.json
@@ -12,9 +12,11 @@
     "@eslint/js": "^9.13.0",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^22.8.6",
     "eslint": "^9.13.0",
     "globals": "^15.11.0",
+    "mongoose": "^8.8.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
