--- a/ChaiOurCodeBackEnd/backEnd/package.json
+++ b/ChaiOurCodeBackEnd/backEnd/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon server.ts"
+    "dev": "nodemon src/index.ts"
   },
   "author": "Rabab",
   "license": "ISC",
