--- a/ChaiOurCodeBackEnd/backEnd/package.json
+++ b/ChaiOurCodeBackEnd/backEnd/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon -r dotenv/config src/index.ts"
   },
   "author": "Rabab",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
     "nodemon": "^3.1.7",
@@ -16,6 +18,8 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.2"
