--- a/codeGyan/masterAPIs/package.json
+++ b/codeGyan/masterAPIs/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.26.0",
+    "@types/dotenv": "^8.2.3",
+    "@types/express": "^5.0.1",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^22.15.11",
     "eslint": "^9.26.0",
     "globals": "^16.0.0",
@@ -18,5 +21,10 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.14.1"
   }
 }
