--- a/codeGyan/masterAPIs/package.json
+++ b/codeGyan/masterAPIs/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.26.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.1",
     "@types/http-errors": "^2.0.4",
@@ -24,6 +25,7 @@
     "typescript-eslint": "^8.32.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
