--- a/codeGyan/masterAPIs/package.json
+++ b/codeGyan/masterAPIs/package.json
@@ -15,6 +15,7 @@
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.1",
     "@types/http-errors": "^2.0.4",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.15.11",
     "eslint": "^9.26.0",
@@ -29,6 +30,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1"
   }
 }
