--- a/codeGyan/masterAPIs/package.json
+++ b/codeGyan/masterAPIs/package.json
@@ -17,6 +17,7 @@
     "@types/http-errors": "^2.0.4",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.15.11",
     "eslint": "^9.26.0",
     "globals": "^16.0.0",
@@ -31,6 +32,7 @@
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.1"
+    "mongoose": "^8.14.1",
+    "multer": "^1.4.5-lts.2"
   }
 }
