--- a/codeGyan/masterAPIs/package.json
+++ b/codeGyan/masterAPIs/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
